[package]
name = "http_logger"
version = "0.1.0"
edition = "2024"
authors = ["Arman Sergazin <arman@sergazin.com>"]
description = "HTTP request/response logger"
homepage = "https://sergazin.com/dev/rust/crates/http_logger"
repository = "https://github.com/sergazin/http_logger.git"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dotenvy = "0.15"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
local-ip-address = "0.6"
